--- a/index.html
+++ b/index.html
@@ -230,5 +230,6 @@
   </template>
 
   <script src="./js/main.js" type="module"></script>
+  <script src="./js/generationMarkupElements.js"></script>
 </body>
 </html>
